--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -15,7 +15,7 @@
         
         <p class = "selection">「high」か「low」どちらかを選択</p><br>
     
-       <%= submit_tag "決定", class: "btn btn-default" %>
+       <%= submit_tag "決定", class: "btn btn-default btn-lg" %>
        
      <% end %>
 
