--- a/app/views/cards/result.html.erb
+++ b/app/views/cards/result.html.erb
@@ -19,5 +19,5 @@
 
 <br><br>
 
-<%= button_to "もう一度挑戦！！", {controller: 'cards', action: 'index'}, {method: :get, class: "btn btn-default"} %>
+<%= button_to "もう一度挑戦！！", {controller: 'cards', action: 'index'}, {method: :get, class: "btn btn-default btn-lg"} %>
 <%# button_toは自動的にpost送信になる。getを指定する。%>
