--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@
     background-color: green;
 }
 
+h1{
+    font-size: 50px;
+}
+
 
 .game{
     text-align: center;
@@ -33,4 +37,5 @@
 
 p{
     font-weight:bold;
+    font-size:20px;
 }
