--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,25 +17,54 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  
-*{
-    background-color: green;
+
+
+body{
+    background-color: #99CC33;
 }
 
-h1{
-    font-size: 50px;
-}
-
-
-.game{
-    text-align: center;
-    /*画像にも、text-align: centerは適用できる*/
+.container{
+    text-align:center;
 }
 
 .selection{
     font-weight: bold;
+    font-size: 20px;
 }
 
-p{
-    font-weight:bold;
-    font-size:20px;
+
+.rule{
+    border: solid 2px white;
+    width: 700px;
+    height: 450px;
+    background-color: white;
+    border-radius:20px;
+    text-align: left;
+    margin: 0 auto;
+    padding: 20px;
+    max-width: 100%;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
+
+.rule h2{
+    text-align: center;
+}
+
+.content{
+    text-align: left;
+}
+
+.form{
+    text-align: left;
+}
+
+.inquiry{
+    padding-bottom: 50px;
+}
+
+.btn-default:hover {
+  border-bottom-color: transparent;
+  transform: translateY(0.1875em);
+}
+/*ボタンを凹ませるのになぜこのようなコードになるか調べる*/
