--- a/app/views/cards/result.html.erb
+++ b/app/views/cards/result.html.erb
@@ -1,4 +1,4 @@
-<h1>High and Low Game</h1><br>
+<br><br>
 
 <%= image_tag(@leftcard) %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <%= image_tag(@rightcard) %><br><br>
@@ -12,9 +12,9 @@
 <% end %>
 
 <% if @radio == result %>
-    <p>You win!!</p>
+    <h3>You win!!</h3>
 <% else %>
-    <p>You lose... </p>
+    <h3>You lose... </h3>
 <% end %>
 
 <br><br>
